--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
+    "react-vivus": "0.0.2",
     "typeface-merriweather": "0.0.43",
     "typeface-montserrat": "0.0.43",
-    "typography": "^0.16.17",
-    "typography-theme-wordpress-2016": "^0.15.10"
+    "typography": "^0.16.18",
+    "typography-theme-doelger": "^0.16.18",
+    "typography-theme-fairy-gates": "^0.16.18",
+    "typography-theme-wordpress-2016": "^0.15.10",
+    "vivus": "^0.4.4"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
