--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-icons-kit": "^1.2.1",
     "react-typography": "^0.16.13",
     "react-vivus": "0.0.2",
     "typeface-merriweather": "0.0.43",
