--- a/package.json
+++ b/package.json
@@ -8,28 +8,26 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "gatsby": "^2.1.18",
-    "gatsby-image": "^2.0.30",
-    "gatsby-plugin-feed": "^2.0.14",
-    "gatsby-plugin-google-analytics": "^2.0.18",
-    "gatsby-plugin-manifest": "^2.0.19",
+    "gatsby": "^2.0.83",
+    "gatsby-image": "^2.0.29",
+    "gatsby-plugin-feed": "^2.0.12",
+    "gatsby-plugin-google-analytics": "^2.0.12",
+    "gatsby-plugin-manifest": "^2.0.14",
     "gatsby-plugin-offline": "^2.0.22",
-    "gatsby-plugin-react-helmet": "^3.0.7",
-    "gatsby-plugin-sharp": "^2.0.22",
-    "gatsby-plugin-typography": "^2.2.7",
-    "gatsby-remark-copy-linked-files": "^2.0.9",
+    "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.0.18",
+    "gatsby-plugin-typography": "^2.2.6",
+    "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.4",
-    "gatsby-remark-prismjs": "^3.2.4",
-    "gatsby-remark-responsive-iframe": "^2.0.9",
-    "gatsby-remark-smartypants": "^2.0.8",
-    "gatsby-source-filesystem": "^2.0.23",
-    "gatsby-source-instagram": "^0.5.0",
-    "gatsby-transformer-remark": "^2.3.0",
-    "gatsby-transformer-sharp": "^2.1.14",
-    "jquery": "^3.3.1",
+    "gatsby-remark-prismjs": "^3.2.2",
+    "gatsby-remark-responsive-iframe": "^2.0.5",
+    "gatsby-remark-smartypants": "^2.0.5",
+    "gatsby-source-filesystem": "^2.0.18",
+    "gatsby-transformer-remark": "^2.2.1",
+    "gatsby-transformer-sharp": "^2.1.12",
     "prismjs": "^1.15.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-icons-kit": "^1.2.1",
     "react-typography": "^0.16.13",
@@ -47,7 +45,7 @@
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.12.4",
     "gh-pages": "^2.0.1",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.1"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
@@ -67,7 +65,7 @@
     "develop": "gatsby develop",
     "start": "npm run develop",
     "build": "gatsby build",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master",
     "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js"
   },
   "engines": {
